<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="bio"
            type="com.example.bio.data.Bio" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00796B"
        android:orientation="vertical"
        android:padding="@dimen/text_padding"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView2"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@{bio.name}"
            android:textColor="#212121" />

        <EditText
            android:id="@+id/enter_hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/auto_fill_hints"
            android:ems="10"
            android:hint="@string/hobby_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#FBE9E7" />

        <Button
            android:id="@+id/done_button"
            style="@style/generalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done_text" />

        <TextView
            android:id="@+id/hobbies_text"
            style="@style/generalStyle"
            android:text="@{bio.hobbies}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                style="@style/generalStyle"
                android:fontFamily="casual"
                android:text="@string/my_bio"
                android:textColor="#212121" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>